--- a/PPP/webportrait/index.html
+++ b/PPP/webportrait/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/wave2.jpg">
+    <link rel="stylesheet" href="pagecss.css">
     <title>Accueil</title>
 </head>
 <body>
@@ -10,14 +12,38 @@
         <nav>
             <h1>Baloo</h1>
             <ul>
-                <li><a href="page1">Accueil</a></li> 
-                <li><a href="page2">Hobbies</a></li>
-                <li><a href="page3">Intéligences</a></li>
-                <li><a href="page4">Portrait Chinois</a></li>
-                <li><a href="page5">Qualités/Défauts</a></li>
-                <li><a href="page6">Mes Projets</a></li>
+                <li><a href="index.html">Accueil</a></li> 
+                <li><a href="page2.html">Hobbies</a></li>
+                <li><a href="page3.html">Intelligences</a></li>
+                <li><a href="page4.html">Portrait Chinois</a></li>
+                <li><a href="page5.html">Qualités/Défauts</a></li>
+                <li><a href="page6.html">Mes Projets</a></li>
             </ul>
         </nav>
     </header>
+    <article class="article1">
+        <img src="images/photo1.jpg" alt="photo de moi">
+     <p>
+        <strong>Présentation:&nbsp;</strong> Salut, je m'appelle Comte Gabriel, je suis né le 27 mars 2006 et j'ai 17 ans. Je suis né à Toul. 
+        J'ai un grand frère, un frère jumeau et deux chats. Je fais 1m90 pour un poids à trois chiffres sacré gabarit. J'ai plusieurs surnoms : Gab, Gaby, "Baloo". 
+        Pourquoi Baloo? 
+        Selon mes parents, ce serait mon frère qui me l'aurait donné quand j'étais petit et depuis, j'aime énormément ce surnom.
+     </p>
+    </article>
+    <article class="article1">
+        <img src="images/1697487625079.jpg" alt="Chappy">
+        <p>
+            <strong>Chat numéro&nbsp; 1:</strong> Voici mon chat Chappy: un chat bien aventureux et paresseux.
+        </p>
+    </article>
+    <article class="article1">
+        <img src="images/img2.jpg" alt="mon oeil">
+        <p>
+            <strong>Particularité physique:</strong> Mon oeil droit a une hétérochromie.
+        </p>
+    </article>
+    <footer>
+        <p><i>Devise de ma vie : vivre avec le moins de regret.</i></p>
+    </footer>
 </body>
-</html>
+</html> 
