--- a/PPP/webportrait/page2.html
+++ b/PPP/webportrait/page2.html
@@ -3,19 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="pagecss.css">
+    <link rel="icon" href="images/wave2.jpg">
+    <title>Hobbies</title>
 </head>
 <body>
     <header>
         <nav>
+            <h1>Baloo</h1>
             <ul>
-                <li><a href="page1">Accueil</a></li> 
-                <li><a href="page2">Accueil</a></li>
-                <li><a href="page3">Accueil</a></li>
-                <li><a href="page4">Accueil</a></li>
-                <li><a href="page5">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li> 
+                <li><a href="page2.html">Hobbies</a></li>
+                <li><a href="page3.html">Intelligences</a></li>
+                <li><a href="page4.html">Portrait Chinois</a></li>
+                <li><a href="page5.html">Qualités/Défauts</a></li>
+                <li><a href="page6.html">Mes Projets</a></li>
             </ul>
         </nav>
     </header>
+    <article class="article1">
+        <img src="images/IMG1.jpg" alt="photo de Malénia"> 
+     <p>
+        <strong>Les jeux vidéos:&nbsp;</strong> Je joue au jeu vidéo depuis ma plus tendre enfance avec &nbsp;comme jeu qui m'a bien marqué : MW3 (je jouais avec mes frères.).
+        Sinon mon jeu préféré du moment  c'est Elden ring: pour preuve, j'ai la figurine de Malénia le boss le plus dur du jeu.
+        Note : petite citation pour se rappeler des vrais objectifs.
+    </p>
+    </article>
+    <article class="article2">
+        <img src="images/1697487625072.jpg" alt="choupette 1" class="imgspace">
+        <img src="images/1697487625093.jpg" alt="choupette 2">
+        <p>
+            <strong>Chat numéro&nbsp; 2:</strong> Voici Choupette: Une filoute qui aime bien s'incruster dans ma chambre pendant que je joue.
+        </p>
+    </article>
+    <article class="article1">
+        <img src="images/1697487625076.jpg" alt="photo de pêche">
+        <p>
+            <strong>La pêche:</strong> Voici une photo de moi et mon &nbsp;frère avec un poisson chat. Je pêche généralement quand j'ai le temps. 
+        </p>
+    </article>
+    <article class="article2">
+        <img src="images/1697496362333.jpg" alt="warhammer1" class="imgspace">
+        <img src="images/1697496284435.jpg" alt="warhammer2">
+        <p>
+            <strong>warhammer:</strong> &nbsp;Mon père nous a appris à mon frère et à moi à jouer à warhammer (elfes sylvains), warhammer 40k (blood angels) et bloodbawl (elfes sylvains et skavens)
+        </p>
+    </article>
+    <article class="article1">
+        <img src="images/1697496284432.jpg" alt="pokémon">
+        <p>
+            <strong>pokemon:</strong> &nbsp;Avec mes frères nous nous intéressons aux cartes pokemons. Mon grand frère a créer une entreprise autour de la revente de des cartes pokemons. Moi j'en fais juste la collection.
+        </p>
+    </article>
+    <article class="article2">
+        <img src="images/1697496284428.jpg" alt="livre pref" class="imgspace">
+        <img src="images/1697496284425.jpg" alt="livre cyber">
+        <p>
+            <strong>Un peu de lecture:</strong> &nbsp; J'aime beaucoup lire donc voici ma série de livre préférée "Gardien des &nbsp;cités perdues", mon manga préféré "One piece". 
+            Je lis aussi beaucoup de &nbsp;livre &nbsp;sur la cybersécurité, car cela me passionne et j'aimerais en faire mon &nbsp;travail &nbsp;plus tard.
+        </p>
+    </article>
+    <article class="article1">
+        <img src="images/1697501899128.jpg" alt="réparation">
+        <p>
+            <strong>éléctronique:</strong> &nbsp;A force de casser mes objets éléctronique, j'ai finis par apprendre à les réparers.
+        </p>
+    </article>
+    <footer>
+        <p><i>Devise de ma vie : vivre avec le moins de regret.</i></p>
+    </footer>
 </body>
 </html>
