--- a/PPP/webportrait/page3.html
+++ b/PPP/webportrait/page3.html
@@ -3,19 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="pagecss.css">
+    <link rel="icon" href="images/wave2.jpg">
+    <title>intelligences</title>
 </head>
 <body>
     <header>
         <nav>
+            <h1>Baloo</h1>
             <ul>
-                <li><a href="page1">Accueil</a></li> 
-                <li><a href="page2">Accueil</a></li>
-                <li><a href="page3">Accueil</a></li>
-                <li><a href="page4">Accueil</a></li>
-                <li><a href="page5">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li> 
+                <li><a href="page2.html">Hobbies</a></li>
+                <li><a href="page3.html">Intelligences</a></li>
+                <li><a href="page4.html">Portrait Chinois</a></li>
+                <li><a href="page5.html">Qualités/Défauts</a></li>
+                <li><a href="page6.html">Mes Projets</a></li>
             </ul>
         </nav>
     </header>
+    <article class="article3">
+        <p>
+            <strong>Logico-mathématique :</strong>
+            Depuis tout petit, je pense avoir eu de grande facilité avec la logique. 
+            Dès que je me retrouve face à des problèmes que ça soit algorithmique ou bien mathématique ou même des problèmes dans la vie de tous les jours : 
+            je trouve une réponse relativement rapidement voir instantanément. Mais cette logique me cause également des problèmes comme par exemple des problèmes 
+            sociales ou bien qui ne demande pas de logique, je vais répondre de manière logique et ce n’est pas vraiment la réponse attendue. 
+            J’ai choisi mon avenir dans l’informatique, car je trouve du plaisir à résoudre des problèmes qui me mettent au défi.    
+        </p>
+    </article>
+    <article class="article3">
+        <p>
+            <strong>Intra-personnelle:</strong>
+            Je pense avoir une bonne intelligence intra-personnelle, j’ai une bonne vision de moi-même et je sais reconnaître mes facilités et mes faiblesses : 
+            &nbsp;comment est mon corps, mes sentiments ? Dans la vie de tous les jours, je reste majoritairement maître de moi-même, excepter quand je joue aux 
+            jeux vidéo qui peuvent me faire rager et je commence à devenir plus violent verbalement (c’est surtout pour cette raison que j’aime m’isoler quand 
+            je joue.), je ne joue pas que pour m’énerver, les jeux m’aident à me détendre, à faire évacuer le stresse de la journée. Je trouve que cette intelligence, 
+            je l’ai développer tardivement, je me rappelle que jusqu’au lycée, j’avais une très mauvaise vision de moi-même et je ne me contrôlais absolument pas mes 
+            excès de rage. 
+        </p>
+    </article>
+    <article class="article3">
+        <p>
+            <strong>Interpersonnelle:</strong>
+            &nbsp;Mon intelligence interpersonnelle devrait être moyennement développée. J’ai du mal à aborder des inconnues, mais une fois fait, je parle avec beaucoup 
+            d’aisance. J’ai une bonne empathie, mais en même temps, j’ai énormément du mal à adapter ma personnalité ou bien agir de manière correcte avec des personnes 
+            tristes. J’ai beau ressentir de la tristesse en voyant les autres tristes , j’ai du mal à le montrer correctement ou au moins réagir correctement. 
+            Pourtant le reste du temps, j’arrive à m’adapter plus ou moins correctement. Et plus une personne me semble familière plus je reste « moi-même » avec cette 
+            personne.
+        </p>
+    </article>
+    <article class="article3">
+        <p>
+            <strong>Musicale:</strong> 
+            Avec mes frères, on arrive à avoir le bon rythme d’une musique. La seule chose que je pense pouvoir dire dessus, c’est que j’adore écouter de la musique et j’en écoute tous les jours.   
+        </p>
+    </article>
+    <article class="article2">
+        <img src="images/1697487625090.jpg" alt="photo1" class="imgspace">
+        <img src="images/1697487625083.jpg" alt="photo2">
+        <p>
+            <strong>Naturaliste:</strong> &nbsp;Je marche quasiment tous les jours et je vais généralement dans la forêt pour observer le paysage, je rencontre plein d’animaux différents. Je regarde à mes pieds, je vois plein d’insectes. Il y a aussi beaucoup d’odeurs en forêts. Marcher en forêt à le pouvoir de me détendre.
+        </p>
+    </article>
+    <article class="article3">
+        <p>
+            <strong>Existentielle:</strong>
+            &nbsp;depuis tout petit je me questionne sur absolument tout, je suis curieux de tout et c’est drôle mais déjà enfant je me posais des questions existentielles qu’on a vues en philosophie. Avec mon ami, on adore parler de tout en philosophie tout est un bon sujet de réflexion que ça soit spirituelle ou bien sur des dilemmes, ou même sur notre monde, notre origine. Pourtant, au bac de philosophie, j’ai eu 7, j’ai beau adorer parler de philosophie, mettre tout ça sur feuille est difficile pour moi.
+        </p>
+    </article>
+    <footer>
+        <p><i>Devise de ma vie : vivre avec le moins de regret.</i></p>
+    </footer>
 </body>
 </html>
