--- a/PPP/webportrait/page4.html
+++ b/PPP/webportrait/page4.html
@@ -3,19 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="pagecss.css">
+    <link rel="icon" href="images/wave2.jpg">
+    <title>Portrait Chinois</title>
 </head>
 <body>
     <header>
         <nav>
+            <h1>Baloo</h1>
             <ul>
-                <li><a href="page1">Accueil</a></li> 
-                <li><a href="page2">Accueil</a></li>
-                <li><a href="page3">Accueil</a></li>
-                <li><a href="page4">Accueil</a></li>
-                <li><a href="page5">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li> 
+                <li><a href="page2.html">Hobbies</a></li>
+                <li><a href="page3.html">Intelligences</a></li>
+                <li><a href="page4.html">Portrait Chinois</a></li>
+                <li><a href="page5.html">Qualités/Défauts</a></li>
+                <li><a href="page6.html">Mes Projets</a></li>
             </ul>
         </nav>
     </header>
+    <article class="article3">
+        <p>
+            Si j’étais un objet, je serais … une cheminée <br><br>
+            Si j’étais une saison, je serais… hiver<br><br>
+            Si j’étais un plat, je serais… un bœuf bourguignon <br><br>
+            Si j’étais un animal, je serais… un ours <br><br>
+            Si j’étais une couleur, je serais… la couleur jaune<br><br>
+            Si j’étais un roman, je serais…  gardien des cités perdu <br><br>
+            Si j’étais un personnage de fiction, je serais… Po dans kung fu panda<br><br>
+            Si j’étais un film, je serais… the mask <br><br>
+            Si j’étais un dessin animé, je serais… suzume no tojimari <br><br>
+            Si j’étais une arme, je serais… katana <br><br>
+            Si j’étais un endroit, je serais… une rivière<br><br>
+            Si j’étais une devise, je serais… «La sagesse n’est pas dans le nombre des années, mais dans la tête.»<br><br>
+            Si j’étais un oiseau, je serais… une colombe<br><br>
+            Si j’étais un élément, je serais… l’eau <br><br>
+            Si j’étais un végétal, je serais… sapin<br><br>
+            Si j’étais un fruit, je serais… une fraise<br><br>
+            Si j’étais un bruit, je serais… éclat goutte d’eau <br><br>
+            Si j’étais un climat, je serais… tropical<br><br>
+            Si j’étais un loisir, je serais… une balade<br><br>
+            Si j’étais une planète, je serais… saturne<br><br>
+            Si j’étais un vêtement, je serais… un pull<br><br>
+            Si j’étais une pièce, je serais… une chambre <br><br>
+            Si j’étais un véhicule, je serais… une Audi <br><br>
+            Si j’étais un adverbe de temps, je serais… maintenant <br><br>
+        </p>
+    </article>
+    <footer>
+        <p><i>Devise de ma vie : vivre avec le moins de regret.</i></p>
+    </footer>
 </body>
 </html>
