--- a/PPP/webportrait/page5.html
+++ b/PPP/webportrait/page5.html
@@ -3,19 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="pagecss.css">
+    <link rel="icon" href="images/wave2.jpg">
+    <title>Qualités/Défauts</title>
 </head>
 <body>
     <header>
         <nav>
+            <h1>Baloo</h1>
             <ul>
-                <li><a href="page1">Accueil</a></li> 
-                <li><a href="page2">Accueil</a></li>
-                <li><a href="page3">Accueil</a></li>
-                <li><a href="page4">Accueil</a></li>
-                <li><a href="page5">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li> 
+                <li><a href="page2.html">Hobbies</a></li>
+                <li><a href="page3.html">Intelligences</a></li>
+                <li><a href="page4.html">Portrait Chinois</a></li>
+                <li><a href="page5.html">Qualités/Défauts</a></li>
+                <li><a href="page6.html">Mes Projets</a></li>
             </ul>
         </nav>
     </header>
+    <article class="article3">
+        <p>
+            <strong>Procrastination:</strong> &nbsp;  Je vois ma procrastination comme un poids, d’habitude léger comme par exemple devoir ranger ma chambre que je repousse tout le long de ma journée puis je me rappelle que j’ai des devoirs à faire ou une tâche supplémentaire à réaliser et donc mon poids commence à prendre de la place, à me rendre anxieux et quand je suis anxieux pour oublier mon anxiété je joue aux jeux vidéos et je deviens de plus en plus anxieux. Ma procrastination est un cercle vicieux. En première, j’avais une dissertation de Français à rendre que je n’ai pas fait (je l’ai continuellement remis au lendemain.) et mon ami lui aussi procrastinateur l’a rendu, mais fait à la dernière minute. Mon ami a eu une mauvaise note tandis que moi, j’ai eu une bonne note, car la prof devait croire qu’elle avait perdu mon travail. Mais ma procrastination est aussi une force : quand je me mets à travailler, je le fais avec une grande concentration et avec efficacité.
+        </p>
+    </article>
+    <article class="article3">
+        <p>
+            <strong>Gentillesse:</strong> &nbsp; J’aime beaucoup aider les autres sans pour autant attendre quelque chose en retour même si un sourire ou bien un merci fait toujours plaisir. J’essaye d’être à l’écoute des autres, de pardonner même si ce n’est pas toujours facile. Récemment, j’ai proposé à un ami de manger avec des inconnus qui mangent seul à la cantine. Les gens que j’ai rencontrés étaient très content de discuter. Ces gens ont du mal à parler aux autres (il y a beaucoup d’étudiants étrangers au CROUS Léopold qui ont peur de parler au gens parce qu’ils sont étranger.).
+        </p>
+    </article>
+    <article class="article3">
+        <p>
+            <strong>Maniaque:</strong> &nbsp; Je suis assez maniaque au niveau de ma chambre : je l’aspire et la range assez régulièrement, ça m’aide à me sentir bien. Je suis aussi maniaque quant à l’organisation de mon pc (Rangement fichier, fenêtre ouverte ... Etc). Le problème de ce côté, c’est que je vais me sentir mal quand je me retrouve dans des maisons, pièces sales mal rangé. Quand on me passe un pc désorganiser je vais avoir tendance à vouloir le ranger pour m’y retrouver ce qui ne plaît pas au propriétaire de ce pc.
+        </p>
+    </article>
+    <article class="article3">
+        <p>
+            <strong>Ambitieux:</strong> &nbsp;  J’ai beaucoup de projets en tête, je veux toujours en faire plus. Je voudrais m’améliorer en anglais donc j’essaye de regarder des séries en anglais, je parle en anglais dans les jeux vidéo en ligne. Mais des fois, je suis un peu trop ambitieux, je me mets trop de projets en même temps et donc je me mets à procrastiner.
+        </p>
+    </article>
+    <footer>
+        <p><i>Devise de ma vie : vivre avec le moins de regret.</i></p>
+    </footer>
 </body>
 </html>
