--- a/PPP/webportrait/page6.html
+++ b/PPP/webportrait/page6.html
@@ -3,21 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
+    <link rel="stylesheet" href="pagecss.css">
+    <link rel="icon" href="images/wave2.jpg">
+    <title>Mes Projets</title>
 </head>
 <body>
     <header>
         <nav>
             <h1>Baloo</h1>
             <ul>
-                <li><a href="page1">Accueil</a></li> 
-                <li><a href="page2">Hobbies</a></li>
-                <li><a href="page3">Intéligences</a></li>
-                <li><a href="page4">Portrait Chinois</a></li>
-                <li><a href="page5">Qualités/Défauts</a></li>
-                <li><a href="page5">Qualités/Défauts</a></li>
+                <li><a href="index.html">Accueil</a></li> 
+                <li><a href="page2.html">Hobbies</a></li>
+                <li><a href="page3.html">Intelligences</a></li>
+                <li><a href="page4.html">Portrait Chinois</a></li>
+                <li><a href="page5.html">Qualités/Défauts</a></li>
+                <li><a href="page6.html">Mes Projets</a></li>
             </ul>
         </nav>
     </header>
+    <article class="article3">
+        <p>
+            <strong>Site cinéma:</strong>&nbsp; J'ai créé en première un site avec mon ami Aloïs dans le but de promouvoir notre option cinéma (ça peut rentrer dans les hobbies)  : <a href="https://cavvatelot.alwaysdata.net/">Cav Vatelot</a>.
+        </p>
+    </article>
+    <article class="article1">
+        <iframe width="1280" height="720" src="https://www.youtube.com/embed/Udw78_3kdag" title="Option Gaming au Lycée Vatelot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>
+            <strong>Vidéo:</strong>&nbsp; C'est ma vidéo préférée de l'option.
+        </p>
+    </article>
+    <article class="article3">
+        <strong>Triche BJ:</strong>&nbsp; J'ai créé un programme permettant démontrer la triche au Black Jack.
+    </article>
+    <footer>
+        <p><i>Devise de ma vie : vivre avec le moins de regret.</i></p>
+    </footer>
 </body>
 </html>
